syntax = "proto3";

package protobuf;

service Chat {
  rpc Register(RegisterRequest) returns (Empty) {}
  rpc Login(LoginRequest) returns (Empty) {}
  rpc Logout(LogoutRequest) returns (Empty) {}
}

message RegisterRequest {
  string username = 1;
  bytes password_hash = 2;
}

message LoginRequest {
  string username = 1;
  bytes password_hash = 2;
}

message LogoutRequest { string username = 1; }

message Empty {}
